--- a/www/app/apps/phonebook/details.html
+++ b/www/app/apps/phonebook/details.html
@@ -82,7 +82,7 @@
                 <div class="text-center">
                   <img class="contact-avatar" ng-if="contact.pic" ng-src="data:image/JPEG;base64,{{contact.pic}}" /-->
                   <img class="no-contact-pic" ng-if="!contact.pic" ng-src="img/new_icons/blue_avatar.png" />
-                  <img ng-show="contact.birthday==today || today==today" class="contact-avatar" style="border:0;border-radius:0" ng-src="img/new_icons/happybirthday.gif">
+                  <img ng-show="contact.birthday==today" class="contact-avatar" style="border:0;border-radius:0" ng-src="img/new_icons/happybirthday.gif">
                 </div>
 
               </li>
