--- a/www/app/apps/phonebook/details.html
+++ b/www/app/apps/phonebook/details.html
@@ -193,7 +193,7 @@
       <div>
         <ion-list class="pele_rtl">
           <ion-item class="item item-avatar item-avatar-right item-icon-left" ng-repeat="devContact in contatcsList" ng-click="setTargetContact(devContact.id)">{{devContact.displayName}} :: {{devContact.id}}
-            <a class="button button-small button-light" style="margin-right:30px" ng-show="targetContactId==devContact.id" on-tap="saveContact(devContact,contact)">לחצו לאישור </a>
+            <button class="button button-small button-light" style="margin-right:30px" ng-show="targetContactId==devContact.id" on-tap="saveContact(devContact,contact)">עדכון</button>
             <!--img class="avatar" ng-if="devContact.photos[0]" src="data:image/JPEG;base64,{{devContact.photos[0].value}} ">
             <img class="avatar" ng-if="devContact.photos[0].type=='url'" ng-src="{{devContact.photos[0].value}}" src="data:image/JPEG;base64,{{devContact.photos[0].value}} "-->
           </ion-item>
