--- a/www/app/apps/phonebook/list.html
+++ b/www/app/apps/phonebook/list.html
@@ -84,6 +84,7 @@
   </ion-content>
   <script id="operunits.html " type="text/ng-template ">
     <ion-modal-view>
+      <div id="swal-target"></div>
       <ion-header-bar class="bar app-top-bar bar-header icon-left icon-right">
         <button class="button button-icon icon ion-ios-search" ng-click="setForm()"></button>
         <h1 class="title ">יחידות תפעוליות</h1>
@@ -99,7 +100,7 @@
                 <div class="col col-35 ">{{u.phoneNumber}}</div>
                 <div class="col col-30 text-left ">
                   <a href="tel:{{u.phoneNumber}} "><img class="pel_icon " src="img/new_icons/gray_phone.png"></a>
-                  <a ng-click="createContact(u) "><img class="pel_icon " src="img/new_icons/purple_add_contact.png"></a>
+                  <a ng-click="swalContact(u) "><img class="pel_icon " src="img/new_icons/purple_add_contact.png"></a>
                 </div>
               </div>
             </ion-item>
