--- a/www/app/apps/dev/devmenu.html
+++ b/www/app/apps/dev/devmenu.html
@@ -50,6 +50,10 @@
                 clear
               </button>
           </a>
+      <a class="item item-icon-left item-icon-right" ng-click="setLowerVersion()">
+              {{appVersion}} בדיקת גרסא נמוכה
+            <i class="icon ion-ios-pulse-strong"></i>
+          </a>
       <a class="item item-icon-right" ui-sref="app.p1_appsLists">
         <i class="icon ion-help-buoy"></i>
         חזרה לאפליקציה
