--- a/www/app/apps/dev/devmenu.html
+++ b/www/app/apps/dev/devmenu.html
@@ -51,7 +51,7 @@
               </button>
           </a>
       <a class="item item-icon-left" ng-click="setLowerVersion()">
-              appVersion = {{appVersion}}  בדיקת גרסא נמוכה
+              appVersion = {{appVersion}}  <span ng-show="appVersion!=0">בדיקת גרסא נמוכה</span>  <span ng-show="appVersion==0">פעיל למשך דקה</span>
             <i class="icon ion-ios-pulse-strong"></i>
           </a>
       <a class="item item-icon-right" ui-sref="app.p1_appsLists">
