--- a/www/app/apps/phonebook/list.html
+++ b/www/app/apps/phonebook/list.html
@@ -94,7 +94,7 @@
       <ion-content scroll="true">
         <div class="card pele_rtl ">
           <div class="list phonebook ">
-            <ion-item ng-repeat="u in useful">
+            <ion-item ng-repeat="u in operunits">
               <div class="row ">
                 <div class="col col-35 item-text-wrap ">
                   {{u.displayName}}
