fix few ui bugs

--- a/www/app/apps/phonebook/details.html
+++ b/www/app/apps/phonebook/details.html
@@ -163,15 +163,15 @@
                 </div>
               </li>
               <li class="item item-info no-border contact-icons text-center">
-                <a href="#" ng-click="swalContact(contact)">
-                  <img class=" pel_icon medium " src="img/new_icons/purple_add_contact.png "></a>
-                <a ng-href="sms://{{contact.mobilePhone}}">
-                  <img class=" pel_icon medium " src="img/new_icons/blue_sms.png "></a>
+                <a href="#" ng-click="swalContact($event,contact)">
+                  <img class="pel_icon medium" src="img/new_icons/purple_add_contact.png "></a>
+                <a ng-show="contact.mobilePhone" ng-href="sms://{{contact.mobilePhone}}">
+                  <img class="pel_icon medium" src="img/new_icons/blue_sms.png "></a>
                 <a href="#" ng-click="shareViaEmail(contact.emailAddress)">
-                  <img class=" pel_icon medium " src="img/new_icons/red_email.png "></a>
-                <a ng-href="tel:{{contact.workPhone}}"><img class=" pel_icon medium " src="img/new_icons/gray_phone.png"></a>
-                <a ng-href="tel:{{contact.mobilePhone}}">
-                  <img class=" pel_icon medium " src="img/new_icons/green_mobile.png"></a>
+                  <img class="pel_icon medium" src="img/new_icons/red_email.png "></a>
+                <a ng-show="contact.workPhone" ng-href="tel:{{contact.workPhone}}"><img class=" pel_icon medium " src="img/new_icons/gray_phone.png"></a>
+                <a ng-show="contact.mobilePhone" ng-href="tel:{{contact.mobilePhone}}">
+                  <img class="pel_icon medium" src="img/new_icons/green_mobile.png"></a>
                 <!--div class="item-section"> <a href="#" ng-click="shareViaEmail(contact.emailAddress)"> e-mail</a> <br \> <a ng-href="sms:{{contact.mobilePhone}}"> <img class="pel_icon medium" src="img/sms.png"></a> <br \> <a href="#"
                 ng-click="shareViaSMS(contact.mobilePhone)"> ng-click <img class=" pel_icon medium " src="img/sms.png "></a> <br \> <a ng-href="tel:{{contact.mobilePhone}} "> <img class="pel_icon medium " src="img/smartphone.png "></a> <br \> <a href="#"
                 ng-click="shareViaWhatsAppToReceiver(contact.mobilePhone)">iver : :<img class="pel_icon medium " src="img/whatsapp.png "></a> <br \> <a href="#" ng-click="shareViaWhatsApp()"> no receiver : <img class="pel_icon medium" src="img/sms.png"></a> </div-->
