--- a/www/app/apps/phonebook/list.html
+++ b/www/app/apps/phonebook/list.html
@@ -11,6 +11,7 @@
     </div>
   </ion-nav-title>
   <ion-content class="phonebook-form pele-background" ng-show="page=='form' || !page">
+
     <div class="row">
       <div class="col col-input">
         <ion-item class="item item-input">
@@ -23,7 +24,6 @@
       </div>
     </div>
     <div class="row">
-
       <div class="col col-input">
         <div class="list pele_ltr">
 
@@ -54,10 +54,27 @@
     <!--div class="col push-top-20"> <div class="text-center push-top-20"> <button class="button button-clear icon-right button-light ion-gear-b"> פעולות </button> </div> </div-->
     <div class="col">
       <div class="text-center">
-        <button ng-click="modals.operunits.show()" class="button button-clear icon-right button-light ion-information-circled">
+        <button ng-click="search('operunits')" class="button button-clear icon-right button-light ion-information-circled">
           יחידות תפעוליות
         </button>
       </div>
+    </div>
+  </ion-content>
+  <ion-content class="pele_rtl" ng-show="page=='result' && searchType=='operunits'">
+    <div class="list phonebook">
+      <ion-item ng-repeat="u in operunits">
+        <div class="row ">
+          <div class="col col-35 item-text-wrap ">
+            {{u.displayName}}
+          </div>
+          <div class="col col-35 ">{{u.phoneNumber}}</div>
+          <div class="col col-30 text-left ">
+            <a href="tel:{{u.phoneNumber}} "><img class="pel_icon" src="img/new_icons/gray_phone.png"></a>
+            <a on-tap="swalContact($event,u)"><img class="pel_icon" src="img/new_icons/purple_add_contact.png"></a>
+          </div>
+        </div>
+      </ion-item>
+      </ion-list>
     </div>
   </ion-content>
   <ion-content class="pele_rtl" ng-show="page=='result' && searchResult.list.length>0">
@@ -84,32 +101,4 @@
     </div>
 
   </ion-content>
-  <script id="operunits.html " type="text/ng-template ">
-    <ion-modal-view>
-      <div id="swal-target"></div>
-      <ion-header-bar class="bar app-top-bar bar-header icon-left icon-right">
-        <button class="button button-icon icon ion-ios-search" ng-click="setForm()"></button>
-        <h1 class="title ">יחידות תפעוליות</h1>
-      </ion-header-bar>
-      <ion-content scroll="true">
-        <div class="card pele_rtl ">
-          <div class="list phonebook ">
-            <ion-item ng-repeat="u in operunits">
-              <div class="row ">
-                <div class="col col-35 item-text-wrap ">
-                  {{u.displayName}}
-                </div>
-                <div class="col col-35 ">{{u.phoneNumber}}</div>
-                <div class="col col-30 text-left ">
-                  <a href="tel:{{u.phoneNumber}} "><img class="pel_icon " src="img/new_icons/gray_phone.png"></a>
-                  <a ng-click="swalContact($event,u) "><img class="pel_icon " src="img/new_icons/purple_add_contact.png"></a>
-                </div>
-              </div>
-            </ion-item>
-            </ion-list>
-          </div>
-        </div>
-      </ion-content>
-    </ion-modal-view>
-  </script>
 </ion-view>
