fix bug in addContact fun

--- a/www/app/apps/phonebook/list.html
+++ b/www/app/apps/phonebook/list.html
@@ -55,7 +55,7 @@
     <div class="col">
       <div class="text-center">
         <button ng-click="search('operunits')" class="button button-clear icon-right button-light ion-information-circled">
-          יחידות תפעוליות
+        טלפונים חשובים
         </button>
       </div>
     </div>
