--- a/www/app/apps/phonebook/details.html
+++ b/www/app/apps/phonebook/details.html
@@ -74,10 +74,6 @@
           <ion-content scroll="true" has-header="true">
             <ul class="list pele_rtl text-right" style="height: 125%;">
               <li class="item no-border">
-                <div class="blue text-center">
-                  <strong>{{contact.firstName}}
-                    {{contact.lastName}}</strong>
-                </div>
                 <div class="text-center">
                   <img class="contact-avatar" ng-if="contact.pic" ng-src="data:image/JPEG;base64,{{contact.pic}}" /-->
                   <img class="no-contact-pic" ng-if="!contact.pic" ng-src="img/new_icons/blue_avatar.png" />
@@ -90,26 +86,26 @@
                   <table class="pele_rtl text-right">
                     <tbody>
                       <tr>
-                        <td class="label">שם פרטי:
+                        <td class="pb label">שם פרטי:
                         </td>
                         <td class="info">
                           {{contact.firstName}}</td>
                       </tr>
                       <tr>
-                        <td class="label">שם משפחה:
+                        <td class="pb label">שם משפחה:
                         </td>
                         <td class="info">
                           {{contact.lastName}}</td>
                       </tr>
                       <tr>
-                        <td class="label">נייד:
+                        <td class="pb label">נייד:
                         </td>
                         <td class="info">
                           <a ng-href="tel://{{contact.mobilePhone}}">{{contact.mobilePhone}}</a>
                         </td>
                       </tr>
                       <tr>
-                        <td class="label">שלוחה:
+                        <td class="pb label">שלוחה:
                         </td>
                         <td class="info">
                           <a ng-href="tel://{{contact.workPhone}}">{{contact.workPhone}}
@@ -117,43 +113,43 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="label">דוא"ל:
+                        <td class="pb label">דוא"ל:
                         </td>
                         <td class="info">
                           {{contact.emailAddress}}</td>
                       </tr>
                       <tr>
-                        <td class="label">מיקום:
+                        <td class="pb label">מיקום:
                         </td>
                         <td class="info">
                           {{contact.orgLocation}}</td>
                       </tr>
                       <tr>
-                        <td class="label">ת.לידה:
+                        <td class="pb label">ת.לידה:
                         </td>
                         <td class="info">
                           {{contact.birthday}}</td>
                       </tr>
                       <tr ng-show="contact.has_sector">
-                        <td class="label">חטיבה:
+                        <td class="pb label">חטיבה:
                         </td>
                         <td class="info">
                           {{contact.sector}}</td>
                       </tr>
                       <tr ng-show="contact.has_section">
-                        <td class="label">אגף:
+                        <td class="pb label">אגף:
                         </td>
                         <td class="info">
                           {{contact.section|replace:"no sector":""}}</td>
                       </tr>
                       <tr ng-show="contact.has_department">
-                        <td class="label">מחלקה:
+                        <td class="pb label">מחלקה:
                         </td>
                         <td class="info">
                           {{contact.department|replace:"no sector":""}}</td>
                       </tr>
                       <tr ng-show="contact.has_team">
-                        <td class="label">צוות
+                        <td class="pb label">צוות
                         </td>
                         <td class="info">
                           {{contact.team|replace:"no sector":""}}</td>
