wip:leads application

--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
   <script src="app/controllers.js"></script>
   <script src="app/factories.js"></script>
   <script src="app/config.js"></script>
-  <script src="app/tabSlideBox.js"></script>
+  <script src="app/directives.js"></script>
   <script src="app/services.js"></script>
   <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
   <!------------------------- MENU ------------------------>
