--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -14,87 +14,107 @@
       template-url="lib/ionic-fancy-select/templates/item-template.html" note-text="A Note text" note-img="img/foo.png" note-img-class="icon" value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)">
     </fancy-select>dsdsdsd
   -->
-    <fancy-select header-text="בחר סוג ליד" items="conf.types" value="lead.type" value-property="TYPE" text-property="DESCRIPTION" allow-empty='false' text="בחרו סוג ליד" not-img-class="hidden" note-text="סוג ליד" value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)"
-      note-img-class="icon ion-android-checkmark-circle" item-class="text-right"> </fancy-select>
+    <ng-form>
+      <fancy-select class="fancy-select text-right" header-text="בחר סוג ליד" items="conf.types" value="lead.LEAD_TYPE" value-property="TYPE" text-property="DESCRIPTION" allow-empty='false' text="בחרו סוג ליד" not-img-class="hidden" note-text=" : סוג ליד "
+        value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)" note-img-class="icon ion-android-checkmark-circle" item-class="text-right pele_rtl"> </fancy-select>
+      <ul class="list">
+        <li class="item no-border item-toggle pele_rtl text-right">
+          ליד עצמי
+          <label class="toggle toggle-positive">
+           <input type="checkbox" ng-model="lead.SELF">
+           <div class="track">
+             <div class="handle"></div>
+           </div>
+         </label>
+        </li>
+        <li>
+          <div class="pele_rtl item-text-wrap"><small>** ליד עצמי לא יעבור להמשך טיפול אצל הגורמים השונים בפלאפון</small></div>
+        </li>
+      </ul>
 
+      <div class="item item-divider item-icon-right item-icon-left" ng-init="info_elm=true" ng-click="info_elm=!info_elm">
+        <i class="pel_icon icon icon-sm" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+        <h2 class="text-right pele_rtl">פרטי לקוח</h2>
+        <i class="icon pel_icon icon-md ion-clipboard"></i>
+      </div>
 
-    <div class="item item-divider item-icon-right item-icon-left" ng-init="info_elm=true" ng-click="info_elm=!info_elm">
-      <i class="pel_icon icon icon-sm" ng-class="info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-      <h2 class="text-right pele_rtl">פרטי לקוח</h2>
-      <i class="icon pel_icon icon-md ion-clipboard"></i>
-    </div>
-    <div class="item-section" ng-show="info_elm">
-      <div class="list lead-form pele_rtl">
-        <label class="item no-border item-input">
+      <div class="item-section" ng-show="info_elm">
+        <div class="list lead-form pele_rtl">
+          <label class="item no-border item-input">
+              <span class="input-label">שם פרטי</span>
+              <input type="text"  ng-model="lead.FIRST_NAME">
+            </label>
+          <label class="item no-border item-input">
+          <span class="input-label">שם משפחה</span>
+          <input type="text"  ng-model="lead.LAST_NAME">
+        </label>
+          <label class="item no-border item-input item-text-wrap">
+          <span class="input-label">מס טלפון לחזרה</span>
+          <input type="text"  ng-model="lead.PHONE_NO_1">
+        </label>
+          <label class="item no-border item-input item-text-wrap">
+            <span class="input-label">מספר טלפון נוסף</span>
+            <input type="text" ng-model="lead.PHONE_NO_2">
+        </label>
+          <label class="item no-border item-input">
+          <span class="input-label">ת.ז לקוח</span>
+          <input type="text" ng-model="lead.CUSTOMER_ID">
+        </label>
+          <label class="item no-border item-input item-text-wrap">
+          <span class="input-label">שעות רצויות לחזרה</span>
+          <input type="text" ng-model="lead.PREFRRED_HOURS">
+        </label>
+          <label class="item no-border item-input item-text-wrap">
+              <span class="input-label">הערות</span>
+          <textarea ng-modle="lead.NOTE"></textarea>
+
+        </label>
+        </div>
+      </div>
+      <div class="item item-divider item-icon-right item-icon-left" ng-init="add_info_elm=true" ng-click="add_info_elm=!add_info_elm">
+        <i class="pel_icon icon icon-sm" ng-class="add_info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
+        <h2 class="text-right pele_rtl">נתונים נוספים</h2>
+        <i class="icon pel_icon icon-md ion-clipboard"></i>
+      </div>
+      <div class="item-section" ng-show="add_info_elm">
+        <div class="list lead-form pele_rtl">
+          <label class="item no-border item-input">
               <span class="input-label">שם פרטי</span>
               <input type="text">
             </label>
-        <label class="item no-border item-input">
+          <label class="item no-border item-input">
           <span class="input-label">שם משפחה</span>
           <input type="text">
         </label>
-        <label class="item no-border item-input item-text-wrap">
+          <label class="item no-border item-input item-text-wrap">
           <span class="input-label">מס טלפון לחזרה</span>
           <input type="text">
         </label>
-        <label class="item no-border item-input item-text-wrap">
+          <label class="item no-border item-input item-text-wrap">
             <span class="input-label">מספר טלפון נוסף</span>
             <input type="text">
         </label>
-        <label class="item no-border item-input">
+          <label class="item no-border item-input">
           <span class="input-label">ת.ז לקוח</span>
           <input type="text">
         </label>
-        <label class="item no-border item-input item-text-wrap">
+          <label class="item no-border item-input item-text-wrap">
           <span class="input-label">שעות רצויות לחזרה</span>
           <input type="text">
         </label>
-        <label class="item no-border item-input item-text-wrap">
+          <label class="item no-border item-input item-text-wrap">
               <span class="input-label">הערות</span>
           <textarea></textarea>
         </label>
+        </div>
       </div>
-    </div>
-    <div class="item item-divider item-icon-right item-icon-left" ng-init="add_info_elm=true" ng-click="add_info_elm=!add_info_elm">
-      <i class="pel_icon icon icon-sm" ng-class="add_info_elm ? 'ion-chevron-down' :'ion-chevron-left'"></i>
-      <h2 class="text-right pele_rtl">נתונים נוספים</h2>
-      <i class="icon pel_icon icon-md ion-clipboard"></i>
-    </div>
-    <div class="item-section" ng-show="add_info_elm">
-      <div class="list lead-form pele_rtl">
-        <label class="item no-border item-input">
-              <span class="input-label">שם פרטי</span>
-              <input type="text">
-            </label>
-        <label class="item no-border item-input">
-          <span class="input-label">שם משפחה</span>
-          <input type="text">
-        </label>
-        <label class="item no-border item-input item-text-wrap">
-          <span class="input-label">מס טלפון לחזרה</span>
-          <input type="text">
-        </label>
-        <label class="item no-border item-input item-text-wrap">
-            <span class="input-label">מספר טלפון נוסף</span>
-            <input type="text">
-        </label>
-        <label class="item no-border item-input">
-          <span class="input-label">ת.ז לקוח</span>
-          <input type="text">
-        </label>
-        <label class="item no-border item-input item-text-wrap">
-          <span class="input-label">שעות רצויות לחזרה</span>
-          <input type="text">
-        </label>
-        <label class="item no-border item-input item-text-wrap">
-              <span class="input-label">הערות</span>
-          <textarea></textarea>
-        </label>
-      </div>
-    </div>
+    </ng-form>
   </ion-content>
 
-  <div style="height:50px;max-height:50px" class="bar bar-footer bar-positive">
-    <a ng-click="submit()" class="title">פתיחת ליד</a>
+  <div style="height:50px;max-height:50px" class="bar bar-footer bar-dark">
+
+    <a class="button button-stable" ng-show="!lead.LEAD_ID" ng-click="submit()" class="title">פתיחת ליד</a>
+    <a class="button button-stable" ng-show="lead.LEAD_ID" ng-click="submit()" class="title">עדכן ליד עצמי</a>
+    <a class="button button-stable" ng-show="lead.LEAD_ID" ng-click="delete(lead.LEAD_ID)" class="title">מחק ליד עצמי</a>
   </div>
 </ion-view>
