--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -14,9 +14,11 @@
       template-url="lib/ionic-fancy-select/templates/item-template.html" note-text="A Note text" note-img="img/foo.png" note-img-class="icon" value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)">
     </fancy-select>dsdsdsd
   -->
-    <ng-form>
+    <ng-form name="leadForm" novalidate>
       <fancy-select class="fancy-select text-right" header-text="בחר סוג ליד" items="conf.types" value="lead.LEAD_TYPE" value-property="TYPE" text-property="DESCRIPTION" allow-empty='false' text="בחרו סוג ליד" not-img-class="hidden" note-text=" : סוג ליד "
-        value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)" note-img-class="icon ion-android-checkmark-circle" item-class="text-right pele_rtl"> </fancy-select>
+        value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)" note-img-class="icon ion-android-checkmark-circle" item-class="text-right pele_rtl">
+      </fancy-select>
+
       <ul class="list">
         <li class="item no-border item-toggle pele_rtl text-right">
           ליד עצמי
@@ -42,24 +44,46 @@
         <div class="list lead-form pele_rtl">
           <label class="item no-border item-input">
               <span class="input-label">שם פרטי</span>
-              <input type="text"  ng-model="lead.FIRST_NAME">
+              <input type="text" name="FIRST_NAME"  ng-model="lead.FIRST_NAME" required>
             </label>
+          <label ng-show="leadForm.first_name.$invalid && leadForm.first_name.$dirty" class="item no-border item-input input-error">
+              יש להזין שם פרטי
+          </label>
+
           <label class="item no-border item-input">
           <span class="input-label">שם משפחה</span>
-          <input type="text"  ng-model="lead.LAST_NAME">
+          <input type="text"  name="LAST_NAME"  ng-model="lead.LAST_NAME" required>
         </label>
+          <label ng-show="leadForm.LAST_NAME.$invalid && leadForm.LAST_NAME.$dirty" class="item no-border item-input input-error">
+            יש להזין שם משפחה
+        </label>
+
           <label class="item no-border item-input item-text-wrap">
-          <span class="input-label">מס טלפון לחזרה</span>
-          <input type="text"  ng-model="lead.PHONE_NO_1">
-        </label>
+            <span class="input-label">מס טלפון לחזרה</span>
+            <input type="text"  name="PHONE_NO_1"  ng-model="lead.PHONE_NO_1" required ng-pattern="/^0[0-9]{2}-?[0-9]{1}-?[0-9]{2}-?[0-9]{4}$/">
+          </label>
+          <label ng-show="leadForm.PHONE_NO_1.$invalid && leadForm.PHONE_NO_1.$dirty" class="item no-border item-input input-error">
+            יש להזין מס' סלולארי תקין
+         </label>
+
           <label class="item no-border item-input item-text-wrap">
             <span class="input-label">מספר טלפון נוסף</span>
-            <input type="text" ng-model="lead.PHONE_NO_2">
+            <input type="text" name="PHONE_NO_2" ng-model="lead.PHONE_NO_2" ng-pattern="/^0[0-9]{2}-?[0-9]{1}-?[0-9]{2}-?[0-9]{3,4}$/">
+
         </label>
+
+          <label ng-show="leadForm.PHONE_NO_2.$invalid && leadForm.PHONE_NO_2.$dirty" class="item no-border item-input input-error">
+            יש להזין מס' נוסף תקין
+          </label>
           <label class="item no-border item-input">
           <span class="input-label">ת.ז לקוח</span>
-          <input type="text" ng-model="lead.CUSTOMER_ID">
+          <input type="text" name="CUSTOMER_ID" ng-model="lead.CUSTOMER_ID" ng-pattern="/^[0-9]{2,10}$/">
         </label>
+          <label ng-show="leadForm.CUSTOMER_ID.$invalid && leadForm.CUSTOMER_ID.$dirty" class="item no-border item-input input-error">
+        יש להזין מס' תקין'
+        </label>
+
+
           <label class="item no-border item-input item-text-wrap">
           <span class="input-label">שעות רצויות לחזרה</span>
           <input type="text" ng-model="lead.PREFRRED_HOURS">
