--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
   <!-- cordova script (this will be a 404 during development) -->
   <!--script src="lib/contacts-mock.js"></script-->
   <script src="cordova.js"></script>
-
+  <script src="lib/form-for/form-for.min.js"></script>
   <script src="lib/moment.min.js"></script>
   <script src="lib/lodash.min.js"></script>
   <script src="lib/ocLazyLoad.min.js"></script>
